fixed horizontal scroll style

--- a/language-fe/src/app/home/components/home/home.component.scss
+++ b/language-fe/src/app/home/components/home/home.component.scss
@@ -1,7 +1,8 @@
 .header {
     height: 50px;
     background-color: lightgray;
-    padding-left: 12px;
+    width: 100%;
+    margin: 0;
 
     .title {
         margin: auto 0 auto 0;
